--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href=
+    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo"><img src="images/Frame.png" alt="" class="logo-image">
+                <h3 class="logo-title"><span style="color:#F948B2;">G</span>amer</h3>
+            </div>
+            <ul>
+                <li>Home</li>
+                <li>Developers</li>
+                <li class="icon-menu">Follow Us On 
+                    <div class="icons">
+                        <div class="youtube">
+                            <i class="fa-brands fa-youtube fa-xl" style="color: #d61f1f;"></i>
+                        </div>
+                     <div class="tiktok">
+                        <i class="fa-brands fa-tiktok fa-xl" ></i>
+                     </div>
+                    </div>
+                    </li>
+            </ul>
+
+        </nav>
+    </header>
+    <body>
+        
+    </body>
+    <footer>
+
+    </footer>
 </body>
 </html>
