added online games section

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <!-- nav section -->
         <nav>
             <div class="logo"><img src="images/Frame.png" alt="" class="logo-image">
                 <h3 class="logo-title"><span style="color:#F948B2;">G</span>amer</h3>
@@ -33,9 +34,43 @@
             </ul>
 
         </nav>
+        <!-- banner section -->
+        <div class="banner" >
+            <div class="banner-container">
+                <h3 class="banner-title">Play Like the<br>G.O.A.T</h3>
+                <p class="banner-content"><i class="fa-regular fa-circle-play" style="color: #f948b2;"></i> 1-click instant play</p>
+            
+            </div>
+            <div class="banner-image">
+                <img src="images/Group 18.png" alt="">
+            </div>
+        </div>
     </header>
     <body>
-        
+        <section class="online-games">
+           <div class="online-games-content">
+            <h3 class="online-games-title">Online Games <span class="text-color">Funny Videos</span></h3>
+            <p class="online-games-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+           </div>
+            <div class="online-games-cards">
+                <div class="card">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <figcaption>No Download. No Installs. Play games Instantly on Gamer.</figcaption>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <figcaption>Did you score? #unblockedgames #school</figcaption>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <figcaption>Breaking game records like OG</figcaption>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <figcaption>Busted gaming on school laptop, but you are still lit.</figcaption>
+                </div>
+            </div>
+        </section>
     </body>
     <footer>
 
