added play instantly section

--- a/index.htm
+++ b/index.htm
@@ -37,6 +37,7 @@
         <!-- banner section -->
     </header>
     <body>
+        <!-- online games section -->
         <section class="online-games">
            <div class="online-games-content">
             <h3 class="online-games-title">Online Games <span class="text-color">Funny Videos</span></h3>
@@ -58,6 +59,18 @@
                 <div class="card">
                     <img src="images/Rectangle 6.png" alt="">
                     <figcaption>Busted gaming on school laptop, but you are still lit.</figcaption>
+                </div>
+            </div>
+        </section>
+        <section class="play-instantly">
+            <div class="play-instantly-container">
+                <div class="play-instantly-content">
+                    <h3 class="play-instanty-title"><span class="text-color">Play Instantly,</span><br>No Downloads,<br>No Installs</h3>
+                    <p class="play-instantly-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="play-instantly-images">
+                    <img src="images/Rectangle 66.png" alt="" class="cat"> 
+                    <img src="images/Rectangle 55.png" alt="" class="cowboy">
                 </div>
             </div>
         </section>
