--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
                 <li>Home</li>
                 <li>Developers</li>
                 <li class="icon-menu">Follow Us On 
-                    <div class="icons">
+                    <div class="icons-follow">
                         <div class="youtube">
                             <i class="fa-brands fa-youtube fa-xl" style="color: #d61f1f;"></i>
                         </div>
@@ -65,7 +65,7 @@
         <section class="play-instantly">
             <div class="play-instantly-container">
                 <div class="play-instantly-content">
-                    <h3 class="play-instanty-title"><span class="text-color">Play Instantly,</span><br>No Downloads,<br>No Installs</h3>
+                    <h3 class="play-instantly-title"><span class="text-color">Play Instantly,</span><br>No Downloads,<br>No Installs</h3>
                     <p class="play-instantly-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
                 <div class="play-instantly-images">
@@ -113,8 +113,32 @@
             </div>
         </section>
     </body>
+    <!-- footer section -->
     <footer>
-
+        <div class="footer-content">
+            <img src="images/Frame.png" alt="" class="footer-image">
+            <h4 class="footer-title">Gamer</h4>
+        </div>
+        <div class="footer-sections-container">
+            <div class="footer-sections">Our Story</div>
+            <div class="footer-sections">Games</div>
+            <div class="footer-sections">Web Games</div>
+            <div class="footer-sections">Career </div>
+            <div class="footer-sections">Support</div>
+            <div class="footer-sections">My Account</div>
+        </div>
+        <div class="footer-icons-container">
+            <div class="footer-icon"><i class="fa-brands fa-twitter fa-2xl" style="color: #ffffff;"></i></div>
+            <div class="footer-icon"><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></div>
+            <div class="footer-icon"><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #ffffff;"></i></div>
+        </div>
+        <div class="footer-terms-section">
+            <div class="footer-terms">Terms and Conditions</div>
+            <div class="footer-terms">Privacy Policy</div>
+            <div class="footer-terms">Privacy settings</div>
+            <div class="footer-terms">Cookie Policy</div>
+        </div>
+        <p class="footer-para">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
     </footer>
 </body>
 </html>
