--- a/index.htm
+++ b/index.htm
@@ -35,6 +35,24 @@
 
         </nav>
         <!-- banner section -->
+        <div class="banner">
+                <div class="banner-content">
+                    <h3 class="banner-title">PLAY LIKE THE <br>
+                        <span class="text-color" style="font-size: 6rem;
+                        font-weight: 800;" >G.O.A.T</span></h3>
+                    <ul class="banner-list">
+                        <li><i class="fa-regular fa-circle-play fa-xl" style="color: #f948b2;"></i> 1-click instant Play</li>
+                        <li>
+                            <i class="fa-solid fa-download fa-xl" style="color: #f948b2;"></i> No Download</li>
+                        <li><i class="fa-solid fa-user fa-xl"></i> 1000s of supported online games</li>
+                    </ul>
+                        <button class="btn-primary">Sign in</button>
+                        <button class="btn-primary" id="blue">Go Rogue</button>
+                </div>
+                <div class="banner-image">
+                    <img src="images/Group 18.png" alt="">
+                </div>
+        </div>
     </header>
     <body>
         <!-- online games section -->
@@ -74,7 +92,9 @@
                 </div>
             </div>
         </section>
+        <!-- icons part -->
         <section class="icons-part">
+          <div class="icon-row1">
             <div class="icons">
                 <img src="images/Rectangle 11.png" alt="">
                 <p>Action Games</p>
@@ -95,21 +115,24 @@
                 <img src="images/Rectangle 15.png" alt="">
                 <p>Word Games</p>
             </div>
-            <div class="icons">
-                <img src="images/Rectangle 15.png" alt="">
-                <p>Role Playing Games</p>
-            </div>
-            <div class="icons" >
-                <img src="images/Rectangle 16.png" alt="">
-                <p>Music and Audio Games</p>
-            </div>
-            <div class="icons">
-                <img src="images/Rectangle 17.png" alt="">
-                <p>Puzzle Games</p>
-            </div>
-            <div class="icons" class="left">
-                <img src="images/Rectangle 18.png" alt="">
-                <p>Strategy Games</p>
+          </div>
+            <div class="icon-row2">
+                <div class="icons">
+                    <img src="images/Rectangle 16.png" alt="">
+                    <p>Role Playing Games</p>
+                </div>
+                <div class="icons" >
+                    <img src="images/Rectangle 17.png" alt="">
+                    <p>Music and Audio Games</p>
+                </div>
+                <div class="icons">
+                    <img src="images/Rectangle 18.png" alt="">
+                    <p>Puzzle Games</p>
+                </div>
+                <div class="icons" class="left">
+                    <img src="images/Rectangle 19.png" alt="">
+                    <p>Strategy Games</p>
+                </div>
             </div>
         </section>
     </body>
@@ -128,9 +151,9 @@
             <div class="footer-sections">My Account</div>
         </div>
         <div class="footer-icons-container">
-            <div class="footer-icon"><i class="fa-brands fa-twitter fa-2xl" style="color: #ffffff;"></i></div>
-            <div class="footer-icon"><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></div>
-            <div class="footer-icon"><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #ffffff;"></i></div>
+            <a href=""><i class="fa-brands fa-twitter fa-2xl" style="color: #ffffff;"></i></a>
+           <a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #ffffff;"></i></a>
+         <a href=""><i class="fa-brands fa-linkedin-in fa-2xl" style="color: #ffffff;"></i></a>
         </div>
         <div class="footer-terms-section">
             <div class="footer-terms">Terms and Conditions</div>
