--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
+    <link rel="icon" type="image/x-icon" href="images/Frame.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,9 +50,7 @@
                         <button class="btn-primary">Sign in</button>
                         <button class="btn-primary" id="blue">Go Rogue</button>
                 </div>
-                <div class="banner-image">
-                    <img src="images/Group 18.png" alt="">
-                </div>
+                    <img src="images/Group 18.png" alt="" class="responsive">
         </div>
     </header>
     <body>
@@ -63,20 +62,38 @@
            </div>
             <div class="online-games-cards">
                 <div class="card">
+                    
                     <img src="images/Rectangle 4.png" alt="">
                     <figcaption>No Download. No Installs. Play games Instantly on Gamer.</figcaption>
+                    <div class="hover-icon">
+                        <i class="fa-solid fa-circle-play fa-2xl" style="color: #f5f5f5;"></i><br>
+                        <p class="hover-title">Watch Now</p>
+                    </div>
+                   
                 </div>
                 <div class="card">
                     <img src="images/Rectangle 5.png" alt="">
                     <figcaption>Did you score? #unblockedgames #school</figcaption>
+                     <div class="hover-icon">
+                        <i class="fa-solid fa-circle-play fa-2xl" style="color: #f5f5f5;"></i><br>
+                        <p class="hover-title">Watch Now</p>
+                    </div>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle 7.png" alt="">
                     <figcaption>Breaking game records like OG</figcaption>
-                </div>
+                    <div class="hover-icon">
+                        <i class="fa-solid fa-circle-play fa-2xl" style="color: #f5f5f5;"></i><br>
+                        <p class="hover-title">Watch Now</p>
+                        </div>
+                </div> 
                 <div class="card">
                     <img src="images/Rectangle 6.png" alt="">
                     <figcaption>Busted gaming on school laptop, but you are still lit.</figcaption>
+                    <div class="hover-icon">
+                        <i class="fa-solid fa-circle-play fa-2xl" style="color: #f5f5f5;"></i><br>
+                        <p class="hover-title">Watch Now</p>
+                        </div>
                 </div>
             </div>
         </section>
@@ -87,7 +104,7 @@
                     <p class="play-instantly-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
                 <div class="play-instantly-images">
-                    <img src="images/Rectangle 66.png" alt="" class="cat"> 
+                    <img src="images/Rectangle 66.png" alt="" class="cat " > 
                     <img src="images/Rectangle 55.png" alt="" class="cowboy">
                 </div>
             </div>
