--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
                         <button class="btn-primary">Sign in</button>
                         <button class="btn-primary" id="blue">Go Rogue</button>
                 </div>
-                    <img src="images/Group 18.png" alt="" class="responsive">
+                    <img src="images/Group 18.png" alt="" class="banner-image">
         </div>
     </header>
     <body>
@@ -104,8 +104,8 @@
                     <p class="play-instantly-description">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
                 <div class="play-instantly-images">
-                    <img src="images/Rectangle 66.png" alt="" class="cat " > 
                     <img src="images/Rectangle 55.png" alt="" class="cowboy">
+                    <img src="images/Rectangle 66.png" alt="" class="cat " > 
                 </div>
             </div>
         </section>
