added icons part grid

--- a/index.htm
+++ b/index.htm
@@ -132,19 +132,19 @@
             </div>
         
             
-                <div class="icons">
+                <div class="icons row2">
                     <img src="images/Rectangle 16.png" alt="">
                     <p>Role Playing Games</p>
                 </div>
-                <div class="icons" >
+                <div class="icons row2" >
                     <img src="images/Rectangle 17.png" alt="">
                     <p>Music and Audio Games</p>
                 </div>
-                <div class="icons">
+                <div class="icons row2">
                     <img src="images/Rectangle 18.png" alt="">
                     <p>Puzzle Games</p>
                 </div>
-                <div class="icons" class="left">
+                <div class="icons row2" class="left">
                     <img src="images/Rectangle 19.png" alt="">
                     <p>Strategy Games</p>
                 </div>
